# pytermui

./: .clang-format  .gitignore  CMakeLists.txt  bind_test.py  makefile  pyproject.toml  readme.md
.github/workflows/: build.yml  push.yml  release.yml
bindings/: CMakeLists.txt  ansi.cpp  console.cpp  elements.cpp  interfaces.cpp  str.cpp  termui.cpp  util.cpp
bindings/include/termui/: globals.cpp  termui.cpp  util.cpp
bindings/include/termui/core/: border.cpp  color.cpp  padding.cpp  rendering.cpp  str.cpp  style.cpp
bindings/include/termui/system/: mouse.cpp  terminal.cpp
bindings/include/termui/ui/base/: input.cpp  padded-text.cpp  pager.cpp  text.cpp
bindings/include/termui/ui/display/: area.cpp  box.cpp  lines.cpp  progress-bar.cpp
bindings/include/termui/ui/interfaces/: binary-menu.cpp  fancy-menu.cpp  info-box.cpp  info-page.cpp  input-box.cpp  input-page.cpp  interface.cpp  menu.cpp  spreadsheet.cpp  text-editor.cpp  toggle-menu.cpp
bindings/include/termui/ui/widgets/: button.cpp  fancy-list.cpp  list.cpp  table.cpp  toggle-list.cpp
pytermui/: __init__.py
